About page modified

--- a/templates/HFC/about.html
+++ b/templates/HFC/about.html
@@ -56,23 +56,33 @@
                                 <img src="{% static 'images/srini.png' %}" alt="Pic">
                             </div>
                             <div class="about-team__info">
-                                <h4>Srinivas Aki <span>Program Manager</span></h4>
+                                <h4>Srinivas Aki <span>Program Director</span></h4>
                                 <p>Leads the complete hackforchange, including its vision, outreach and program
                                     execution</p>
                             </div>
                         </div>
                         <div class="about-team__sec">
                             <div class="about-team__fig">
-                                <img src="{% static 'images/durga.png' %}" alt="Durga Raghavapurapu">
+                                <img src="{% static 'images/anand.png' %}" alt="Anand Chitipothu">
                             </div>
                             <div class="about-team__info">
-                                <h4>Durga Raghavapurapu <span>Engineering Lead</span></h4>
+                                <h4>Anand Chitipothu <span>Solution Architect</span></h4>
                                 <p>Leads the development effort, along with community of developers from cities and
                                     colleges</p>
                             </div>
                         </div>
                     </div>
                     <div class="about-team__outer about-team__outer--third">
+                        <div class="about-team__sec">
+                            <div class="about-team__fig">
+                                <img width="100" src="{% static 'images/durga.png' %}" alt="Durga Raghavapurapu">
+                            </div>
+                            <div class="about-team__info">
+                                <h4>Durga Raghavapurapu<span>Engineering Lead</span></h4>
+                                <p>Leads the development effort, along with community of developers from cities and
+                                    colleges </p>
+                            </div>
+                        </div>
                         <div class="about-team__sec">
                             <div class="about-team__fig">
                                 <img width="100" src="{% static 'images/sambit.png' %}" alt="Sambit Mohanty">
@@ -88,7 +98,7 @@
                                 <img width="100" src="{% static 'images/suman.png' %}" alt="Suman Tyaagi">
                             </div>
                             <div class="about-team__info">
-                                <h4>Suman Tyaagi<span>Community Outreach</span></h4>
+                                <h4>Suman Tyaagi<span>Program Manager</span></h4>
                                 <p>Getting people inspired and joining hands to work together on our platform</p>
                             </div>
                         </div>
