Event seat size added

--- a/templates/HFC/about.html
+++ b/templates/HFC/about.html
@@ -75,6 +75,15 @@
                     <div class="about-team__outer about-team__outer--third">
                         <div class="about-team__sec">
                             <div class="about-team__fig">
+                                <img width="100" src="{% static 'images/suman.png' %}" alt="Suman Tyaagi">
+                            </div>
+                            <div class="about-team__info">
+                                <h4>Suman Tyaagi<span>Program Manager</span></h4>
+                                <p>Getting people inspired and joining hands to work together on our platform</p>
+                            </div>
+                        </div>
+                        <div class="about-team__sec">
+                            <div class="about-team__fig">
                                 <img width="100" src="{% static 'images/durga.png' %}" alt="Durga Raghavapurapu">
                             </div>
                             <div class="about-team__info">
@@ -95,13 +104,15 @@
                         </div>
                         <div class="about-team__sec">
                             <div class="about-team__fig">
-                                <img width="100" src="{% static 'images/suman.png' %}" alt="Suman Tyaagi">
+                                <img width="100" src="{% static 'images/shruti.jpg' %}" alt="Shruti Pandey">
                             </div>
                             <div class="about-team__info">
-                                <h4>Suman Tyaagi<span>Program Manager</span></h4>
-                                <p>Getting people inspired and joining hands to work together on our platform</p>
+                                <h4>Shruti Pandey<span>Community Manager</span></h4>
+                                <p>Leads the community effort for hack for change and all its outreach channels</p>
                             </div>
                         </div>
+                    </div>
+                    <div class="about-team__outer about-team__outer--third">
                         <div class="about-team__sec">
                             <div class="about-team__fig">
                                 <img width="100" src="{% static 'images/shabana.png' %}" alt="Shabana Syed">
@@ -109,15 +120,6 @@
                             <div class="about-team__info">
                                 <h4>Shabana Syed <span>Visual Design</span></h4>
                                 <p>Leads the design effort for hack for change and all its outreach channels</p>
-                            </div>
-                        </div>
-                        <div class="about-team__sec">
-                            <div class="about-team__fig">
-                                <img width="100" src="{% static 'images/shruti.jpg' %}" alt="Shruti Pandey">
-                            </div>
-                            <div class="about-team__info">
-                                <h4>Shruti Pandey<span>Community Manager</span></h4>
-                                <p>Leads the community effort for hack for change and all its outreach channels</p>
                             </div>
                         </div>
                     </div>
