--- a/static/css/style.css
+++ b/static/css/style.css
@@ -581,6 +581,7 @@ ______________________*/
 .blog-single h3{
 	color: #262626;
 	margin-bottom: 21px;
+	line-height:1.3;
 }
 .single__author-sec{
 	display: -webkit-flex;
