Footer links updated

--- a/templates/HFC/footer.html
+++ b/templates/HFC/footer.html
@@ -32,7 +32,7 @@
                     <ul>
                         <li><a href="{% url 'about' %}">About Us</a></li>
                         <li><a href="{% url 'about' %}">Our Mission</a></li>
-                        <li><a href="{% url 'about' %}">Contact Us</a></li>
+                        <li><a href="{% url 'contact' %}">Contact Us</a></li>
                         <li><a href="{% url 'privacy' %}">Privacy Policy</a></li>
                         <li><a href="{% url 'terms_conditions' %}">Terms & Conditions</a></li>
                     </ul>
