Css file changed

--- a/static/css/style_custom.css
+++ b/static/css/style_custom.css
@@ -19,9 +19,9 @@ input[type="checkbox"]{
 .iti--allow-dropdown {
     width: 100%;
   }
-#id_contact_number{
+/*#id_contact_number{
     text-indent: 25px;
-}
+}*/
 
   
   
