Linkedin field added to event signup

--- a/templates/EventsEngine/event_detail.html
+++ b/templates/EventsEngine/event_detail.html
@@ -34,8 +34,8 @@
                             {% endif %}
                     </p>
                     {% if "Registrations Open" == event.registration|stringformat:"s" %}
-                     <a class="btn btn--event" href="{% url 'google_login' event.title_slug  %}">Signup with Google</a>
-                     <p class ="large">{{seats_left}} seats left</p>
+                     <a class="btn btn--event" href="{% url 'google_login' event.title_slug  %}">Signup with Google</a><br><br>
+                     <p class ="large" style="padding-top: 1em;" >{{seats_left}} seats left</p>
                     {% endif %}
                 
                 </div>
@@ -55,7 +55,7 @@
                     </p>
                     {% if "Registrations Open" == event.registration|stringformat:"s" %}
                      <a class="btn btn--event" href="{% url 'google_login' event.title_slug  %}">Signup with Google</a>
-                     <p class ="large">{{seats_left}} seats left</p>
+                     <p class ="large" style ="padding-top: 1em;">{{seats_left}} seats left</p>
                      {% endif %}
                 </div>
             </div>
@@ -75,7 +75,7 @@
                     </p>
                     {% if "Registrations Open" == event.registration|stringformat:"s" %}
                      <p><a class="btn btn--event" href="{% url 'google_login' event.title_slug  %}">Signup with Google</a></p>
-                     <p class ="large">{{seats_left}} seats left</p>
+                     <p class ="large" style ="padding-top: 1em;">{{seats_left}} seats left</p>
                     {% endif %}
                 </div>
             </div>
