Team page updated

--- a/templates/HFC/about.html
+++ b/templates/HFC/about.html
@@ -104,10 +104,10 @@
                         </div>
                         <div class="about-team__sec">
                             <div class="about-team__fig">
-                                <img width="100" src="{% static 'images/shruti.jpg' %}" alt="Shruti Pandey">
+                                <img width="100" src="{% static 'images/abhijit.png' %}" alt="Abhijit Bhat">
                             </div>
                             <div class="about-team__info">
-                                <h4>Shruti Pandey<span>Community Manager</span></h4>
+                                <h4>Abhijit Bhat<span>Program Coordinator</span></h4>
                                 <p>Leads the community effort for hack for change and all its outreach channels</p>
                             </div>
                         </div>
@@ -122,6 +122,16 @@
                                 <p>Leads the design effort for hack for change and all its outreach channels</p>
                             </div>
                         </div>
+                        <div class="about-team__sec">
+                            <div class="about-team__fig">
+                                <img width="100" src="{% static 'images/shruti.jpg' %}" alt="Shruti Pandey">
+                            </div>
+                            <div class="about-team__info">
+                                <h4>Shruti Pandey<span>Community Manager</span></h4>
+                                <p>Leads the community effort for hack for change and all its outreach channels</p>
+                            </div>
+                        </div>
+                        
                     </div>
             </section>
 
