--- a/templates/EventsEngine/event_detail.html
+++ b/templates/EventsEngine/event_detail.html
@@ -48,7 +48,7 @@
                     <h1>{{event.title}}</h1>
                     <p class="large">
                             {% if event.event_type|stringformat:"s" == "Webinar" or "Workshop" %}
-                            {{event.start_date|date:"F jS, f:i A"}} - {{event.end_date|date:"f:i A"}}
+                            {{event.start_date|date:"F jS, f A"}} - {{event.end_date|date:"f A"}}
                             {% else %}
                             {{event.start_date|date:"F j, o"}} - {{event.end_date|date:"F j, o"}}
                             {% endif %}
