--- a/templates/HFC/hfc_home.html
+++ b/templates/HFC/hfc_home.html
@@ -40,8 +40,7 @@
             <div class="solution__inner">
                 <div class="solution__right">
                     <h2>Our focus areas</h2>
-                    <p> Our primary focus is on empowering lasting social change by improving ones' relationship with
-                        the government and also with his community as a whole.</p>
+                    <p> Our primary focus is on building an active community of social organizations, funding organizations and enabling a thriving community of contributors that can collectively leverage technology for social good.</p>
                     <a class="btn btn--border" href="{% url 'issue_areas'%}">Read More</a>
                 </div>
             </div>
@@ -53,30 +52,29 @@
         <div class="contribute__main">
             <div class="contribute__top">
                 <h2 class="underline">How can you contribute?</h2>
-                <p>Join our community of coders, designers and experienced mentors to work on specific problem
-                    statements</p>
+                <p>Join our community of social organizations, funding organizations and other active contributors who are interested in solving some of the pressing issues in India using technology.</p>
 
             </div>
             <div class="contribute__outer">
                 <div class="contribute__sec">
                     <div class="contribute__info">
-                        <h4>Coders</h4>
-                        <p> Develop robust and scalable software applications based on product roadmaps</p>
+                        <h4>Suggest A Problem Statement</h4>
+                        <p>Organizations with deep domain expertise are invited to help us understand and design solutions to the pressing problems.</p>
                         <img src="{% static 'images/undraw_code_typing_7jnv.svg' %}" srcset="images/undraw_code_typing_7jnv@2x.png 2x, images/undraw_code_typing_7jnv@3x.png 3x"
                             alt="Pic">
                     </div>
                 </div>
                 <div class="contribute__sec">
                     <div class="contribute__info">
-                        <h4>Designers</h4>
-                        <p>Ideate and design solutions for some of the pressing social problems of today</p>
+                        <h4>Fund A Social Project</h4>
+                        <p>Funding Organizations can join our network to validate and support projects that are selected for further implementation.</p>
                         <img width="238" src="{% static 'images/contribute-img2.svg' %}" alt="Pic">
                     </div>
                 </div>
                 <div class="contribute__sec">
                     <div class="contribute__info">
-                        <h4>Mentors</h4>
-                        <p>Guide our community of developers from various city chapters and colleges</p>
+                        <h4>Become An Active Contributor</h4>
+                        <p>Students and Working Professionals can actively contribute towards coding, designing and promoting the social projects.</p>
                         <img src="{% static 'images/undraw_online_learning_ao11.svg' %}" srcset="images/undraw_online_learning_ao11@2x.png 2x, images/undraw_online_learning_ao11@3x.png 3x"
                             alt="Pic">
                     </div>
